# modulex-python

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/snippets/: api-keys.mdx  auth.mdx  chats.mdx  composer.mdx  credentials.mdx  dashboard.mdx  deployments.mdx  executions.mdx  integrations.mdx  knowledge.mdx  notifications.mdx  organizations.mdx  schedules.mdx  subscriptions.mdx  system.mdx  templates.mdx  workflows.mdx
examples/: basic_usage.py  knowledge_base.py  run_workflow.py  streaming_example.py
src/modulex/: __init__.py  _base.py  _client.py  _compat.py  _config.py  _exceptions.py  _streaming.py
src/modulex/resources/: __init__.py  api_keys.py  auth.py  chats.py  composer.py  credentials.py  dashboard.py  deployments.py  executions.py  integrations.py  knowledge.py  notifications.py  organizations.py  schedules.py  subscriptions.py  system.py  templates.py  workflows.py
src/modulex/types/: __init__.py  api_keys.py  auth.py  chats.py  composer.py  credentials.py  dashboard.py  executions.py  integrations.py  knowledge.py  notifications.py  organizations.py  schedules.py  shared.py  subscriptions.py  templates.py  workflows.py
tests/: conftest.py  test_auth.py  test_client.py  test_credentials.py  test_error_handling.py  test_executions.py  test_knowledge.py  test_pagination.py  test_retry.py  test_schedules.py  test_streaming.py  test_workflows.py
tests/integration/: __init__.py  conftest.py  test_api_keys.py  test_auth.py  test_chats.py  test_composer.py  test_credentials.py  test_dashboard.py  test_deployments.py  test_error_handling.py  test_executions.py  test_integrations.py  test_knowledge.py  test_notifications.py  test_schedules.py  test_subscriptions.py  test_system.py  test_templates.py  test_workflows.py
