[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modulex-python"
version = "0.1.0"
description = "Official Python SDK for the ModuleX AI workflow orchestration platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ModuleX", email = "contact@modulex.dev" },
]
keywords = ["modulex", "ai", "workflow", "orchestration", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://modulex.dev"
Documentation = "https://docs.modulex.dev"
Repository = "https://github.com/ModuleXAI/modulex-python"
Issues = "https://github.com/ModuleXAI/modulex-python/issues"
Changelog = "https://github.com/ModuleXAI/modulex-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/modulex"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/", "docs/", ".github/", "examples/", "Makefile", ".env*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Exclude integration tests from default run (they require env vars and a real API)
addopts = "--ignore=tests/integration"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
